Migration to GitHub Pages v3.0.0 - nuclear cleanup

--- a/emergency-reset.html
+++ b/emergency-reset.html
@@ -100,6 +100,7 @@
 <body>
   <div class="container">
     <h1>🔧 Аварийный сброс v3.0.0</h1>
+    <p style="color: #666; margin-bottom: 10px;">GitHub Pages Migration</p>
     <p>Emergency Nuclear Reset - Полная очистка кеша и Service Workers</p>
     
     <div id="status">
