Fix: Add mobile-web-app-capable meta tag v5.2.5

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#27ae60">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Зелёная Долина">
     <link rel="icon" type="image/png" sizes="32x32" href="./icon-48x48.png">
