Add gas meter to counters section v5.3.5

--- a/public/index.html
+++ b/public/index.html
@@ -389,6 +389,10 @@
             </div>
             <div class="input-group">
                 <label>Горячая вода (м³)</label>
+            </div>
+            <div class="input-group">
+                <label>Газ (м³)</label>
+                <input type="number" placeholder="Текущие показания">
                 <input type="number" placeholder="Текущие показания">
             </div>
             <div class="input-group">
