fix: Stop audio timer at 60 seconds to prevent infinite alerts
FIXES:
- Added clearInterval(audioTimer) when 60 second limit is reached
- Prevents multiple alert popups after recording limit
- Timer stops properly after auto-stop

PROBLEM:
- Timer continued running after 60 seconds
- Alert showed repeatedly every second
- User couldn't close the alert dialog

SOLUTION:
- Clear interval before showing alert
- Set audioTimer to null
- MediaRecorder stops cleanly

RESULT:
✅ Audio recording stops at 60 seconds
✅ Only one alert is shown
✅ No more infinite alert loop

VERSION: v6.1.2
TESTED: Needs testing on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -2495,6 +2495,8 @@
                         // Автостоп на 60 секундах
                         if (elapsed >= 60) {
                             console.log('⏰ Достигнут лимит 60 секунд');
+                            clearInterval(audioTimer);
+                            audioTimer = null;
                             if (mediaRecorder && mediaRecorder.state === 'recording') {
                                 mediaRecorder.stop();
                             }
