fix(create-request): добавлена очистка localStorage после отправки заявки

--- a/public/create-request.html
+++ b/public/create-request.html
@@ -608,6 +608,10 @@
                         });
                         localStorage.setItem('requests', JSON.stringify(requests));
                         
+                        // Очистить медиафайлы из localStorage
+                        localStorage.removeItem('requestMedia');
+                        attachedMedia = [];
+                        
                         // Редирект к списку заявок
                         setTimeout(() => {
                             window.location.href = 'index.html';
