fix(audio): исправлен интервал записи с 100мс на 1000мс для стабильности

--- a/public/create-request.html
+++ b/public/create-request.html
@@ -862,8 +862,8 @@
                     stopAudioRecording();
                 };
                 
-                // Начать запись
-                audioRecorder.start(100); // Сохранять данные каждые 100мс (более стабильно)
+                // Начать запись (1000мс для стабильности интерфейса)
+                audioRecorder.start(1000);
                 console.log('[Audio] Запись началась');
                 
                 // Обновить UI
