fix: v6.8.2 final russian fix + working buttons + theme

--- a/public/cameras.html
+++ b/public/cameras.html
@@ -34,7 +34,7 @@
     <main style="max-width: 720px; margin: 80px auto; padding: 20px;">
         <h1 style="margin-bottom: 16px;"> Камеры видеонаблюдения</h1>
         <button class="btn btn-secondary" onclick="history.back()">Назад</button>
-        <div class="version" style="margin-top: 16px; color: var(--color-text-secondary);">v6.8.2</div>
+        <div class="version" style="margin-top: 16px; color: #666; font-size: 14px; text-align: center;">v6.8.2</div>
     </main>
 
     <script>
@@ -42,4 +42,3 @@
     </script>
 </body>
 </html>
-
