--- a/public/payments.html
+++ b/public/payments.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="./icon-48x48.png">
 </head>
 <body>
-    <button id="theme-toggle" style="position: fixed; top: 10px; left: 10px; z-index: 9999; font-size: 24px; background: none; border: none; cursor: pointer;">🌓</button>
+    <button id="theme-toggle" style="position: fixed; top: 10px; left: 10px; z-index: 9999; font-size: 24px; background: none; border: none; cursor: pointer;"></button>
     <script>
     const themeToggle = document.getElementById('theme-toggle');
     const currentTheme = localStorage.getItem('theme') || 'light';
@@ -34,7 +34,7 @@
     <main style="max-width: 720px; margin: 80px auto; padding: 20px;">
         <h1 style="margin-bottom: 16px;"> Платежи</h1>
         <button class="btn btn-secondary" onclick="history.back()">Назад</button>
-        <div class="version" style="margin-top: 16px; color: var(--color-text-secondary);">v6.8.2</div>
+        <div class="version" style="margin-top: 16px; color: #666; font-size: 14px; text-align: center;">v6.8.2</div>
     </main>
 
     <script>
@@ -42,4 +42,3 @@
     </script>
 </body>
 </html>
-
