--- a/public/create-request.html
+++ b/public/create-request.html
@@ -1,82 +1,155 @@
 ﻿<!DOCTYPE html>
-<!-- УК "Зелёная Долина" - Создание заявки v6.8.2 -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#2E7D32">
     <title>Новая заявка - УК Зелёная долина v6.8.2</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; padding: 20px; min-height: 100vh; background: #f5f5f5; }
-        h1 { font-size: 20px; margin-bottom: 24px; color: #2E7D32; word-wrap: break-word; text-align: center; }
-        button { min-height: 44px; padding: 14px 20px; font-size: 16px; border-radius: 12px; border: none; cursor: pointer; width: 100%; margin-bottom: 10px; font-weight: 500; }
-        button:active { opacity: 0.7; }
-        .version { position: fixed; bottom: 16px; right: 16px; font-size: 12px; opacity: 0.5; color: #666; pointer-events: none; }
-        
-        .card { background: white; padding: 20px; border-radius: 16px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); margin-bottom: 20px; }
-        label { display: block; margin-bottom: 8px; font-weight: 600; color: #333; }
-        textarea { width: 100%; min-height: 120px; padding: 14px; border: 2px solid #e0e0e0; border-radius: 12px; font-size: 16px; outline: none; resize: vertical; font-family: inherit; }
-        textarea:focus { border-color: #2E7D32; }
-        
-        .media-buttons { display: grid; grid-template-columns: 1fr; gap: 10px; margin-bottom: 20px; }
-        @media (min-width: 768px) {
-            .media-buttons { grid-template-columns: repeat(3, 1fr); }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        .btn-media { background: white; border: 2px solid #e0e0e0; color: #333; }
-        .btn-primary { background: #2E7D32; color: white; font-weight: bold; }
-        .btn-secondary { background: #e0e0e0; color: #333; }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #f5f5f5;
+            padding: 20px;
+            min-height: 100vh;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background: white;
+            padding: 24px;
+            border-radius: 12px;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 24px;
+            color: #2E7D32;
+            word-wrap: break-word;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 500;
+            font-size: 16px;
+        }
+
+        textarea {
+            width: 100%;
+            padding: 14px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px;
+            min-height: 120px;
+            resize: vertical;
+            margin-bottom: 20px;
+        }
+
+        .media-buttons {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 12px;
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 14px;
+            background: #2E7D32;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            cursor: pointer;
+            min-height: 44px;
+        }
+
+        button:active {
+            opacity: 0.8;
+        }
+
+        .actions {
+            display: flex;
+            gap: 12px;
+        }
+
+        .actions button {
+            flex: 1;
+            padding: 16px;
+        }
+
+        .back-btn {
+            background: #757575;
+        }
+
+        input[type="file"] {
+            display: none;
+        }
+
+        .version {
+            position: fixed;
+            bottom: 16px;
+            right: 16px;
+            font-size: 12px;
+            opacity: 0.5;
+            color: #666;
+        }
     </style>
 </head>
 <body>
-    <div class="card">
-        <h1>Новая заявка</h1>
-        <div style="margin-bottom: 20px;">
-            <label for="description">Описание проблемы</label>
-            <textarea id="description" placeholder="Опишите проблему..."></textarea>
-        </div>
+    <div class="container">
+        <h1> Новая заявка</h1>
 
-        <!-- Кнопки медиа -->
+        <label for="description">Описание проблемы</label>
+        <textarea id="description" placeholder="Опишите проблему подробно..."></textarea>
+
         <div class="media-buttons">
-            <button type="button" class="btn-media" onclick="document.getElementById('photoInput').click()"> Прикрепить фото</button>
-            <button type="button" class="btn-media" onclick="document.getElementById('videoInput').click()"> Прикрепить видео</button>
-            <button type="button" class="btn-media" onclick="document.getElementById('audioInput').click()"> Прикрепить аудио</button>
+            <button onclick="document.getElementById('photoInput').click()"> Фото</button>
+            <button onclick="document.getElementById('videoInput').click()"> Видео</button>
+            <button onclick="document.getElementById('audioInput').click()"> Аудио</button>
         </div>
 
-        <!-- Скрытые file inputs -->
-        <input type="file" id="photoInput" accept="image/*" style="display: none;" onchange="handlePhoto(this)">
-        <input type="file" id="videoInput" accept="video/*" style="display: none;" onchange="handleVideo(this)">
-        <input type="file" id="audioInput" accept="audio/*" style="display: none;" onchange="handleAudio(this)">
+        <input type="file" id="photoInput" accept="image/*" onchange="handleFile(this, 'Фото')">
+        <input type="file" id="videoInput" accept="video/*" onchange="handleFile(this, 'Видео')">
+        <input type="file" id="audioInput" accept="audio/*" onchange="handleFile(this, 'Аудио')">
 
-        <div style="display: flex; flex-direction: column; gap: 10px;">
-            <button class="btn-primary" onclick="alert(' Заявка отправлена!'); window.location.href='index.html'">Отправить заявку</button>
-            <button class="btn-secondary" onclick="window.history.back()">Назад</button>
+        <div class="actions">
+            <button onclick="submitRequest()">Отправить заявку</button>
+            <button class="back-btn" onclick="goBack()">Назад</button>
         </div>
     </div>
 
     <div class="version">v6.8.2</div>
 
     <script>
-        console.log('[create-request.html v6.8.2] Loaded');
+        console.log('[create-request.html v6.8.2] Страница заявки загружена');
 
-        function handlePhoto(input) {
+        function handleFile(input, type) {
             if (input.files[0]) {
-                console.log(' Фото выбрано:', input.files[0].name);
-                alert(' Фото прикреплено: ' + input.files[0].name);
+                console.log(type + ' выбрано:', input.files[0].name);
+                alert(type + ' прикреплено: ' + input.files[0].name);
             }
         }
 
-        function handleVideo(input) {
-            if (input.files[0]) {
-                console.log(' Видео выбрано:', input.files[0].name);
-                alert(' Видео прикреплено: ' + input.files[0].name);
+        function submitRequest() {
+            const desc = document.getElementById('description').value;
+            if (!desc.trim()) {
+                alert('Пожалуйста, опишите проблему');
+                return;
             }
+            console.log(' Заявка отправлена:', desc);
+            alert('Заявка отправлена успешно!');
+            setTimeout(() => goBack(), 1000);
         }
 
-        function handleAudio(input) {
-            if (input.files[0]) {
-                console.log(' Аудио выбрано:', input.files[0].name);
-                alert(' Аудио прикреплено: ' + input.files[0].name);
-            }
+        function goBack() {
+            window.location.href = 'index.html';
         }
     </script>
 </body>
