--- a/public/meters.html
+++ b/public/meters.html
@@ -2,27 +2,62 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#2E7D32">
     <title>Счётчики - УК Зелёная долина v6.8.2</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f5f5f5; padding: 20px; min-height: 100vh; }
-        .container { max-width: 600px; margin: 0 auto; background: white; padding: 24px; border-radius: 12px; }
-        h1 { font-size: 24px; margin-bottom: 24px; color: #2E7D32; }
-        .placeholder { text-align: center; color: #757575; margin: 40px 0; }
-        button { padding: 14px; background: #757575; color: white; border: none; border-radius: 8px; font-size: 16px; cursor: pointer; width: 100%; min-height: 44px; }
-        button:active { opacity: 0.8; }
-        .version { position: fixed; bottom: 16px; right: 16px; font-size: 12px; opacity: 0.5; color: #666; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #f5f5f5;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background: white;
+            padding: 24px;
+            border-radius: 12px;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 24px;
+            color: #2E7D32;
+        }
+        .info {
+            padding: 20px;
+            background: #f9f9f9;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        button {
+            width: 100%;
+            padding: 16px;
+            background: #2E7D32;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            cursor: pointer;
+            min-height: 44px;
+        }
+        .version {
+            position: fixed;
+            bottom: 16px;
+            right: 16px;
+            font-size: 12px;
+            opacity: 0.5;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1> Показания счётчиков</h1>
-        <div class="placeholder">Нет данных о счётчиках</div>
+        <h1> Счётчики</h1>
+        <div class="info">
+            <p>Раздел показаний счётчиков в разработке</p>
+        </div>
         <button onclick="window.location.href='index.html'">Назад</button>
     </div>
     <div class="version">v6.8.2</div>
-    <script>console.log('[meters.html v6.8.2] Загружено');</script>
 </body>
 </html>
