--- a/public/payments.html
+++ b/public/payments.html
@@ -36,8 +36,17 @@
         }
         .version { position: fixed; bottom: 16px; right: 16px; font-size: 12px; opacity: 0.5; color: #666; }
     </style>
+    <link rel="stylesheet" href="css/navigation.css">
 </head>
-<body>
+<body class="with-nav">
+    <div class="nav-header">
+        <button class="nav-btn nav-back" onclick="window.history.back()">
+            <span></span>
+        </button>
+        <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
+            <span></span>
+        </button>
+    </div>
     <h1> Мои платежи</h1>
     
     <div class="debt-card">
@@ -70,7 +79,9 @@
         </div>
     </div>
 
-    <button class="btn-back" onclick="window.history.back()"> Назад</button>
+    
     <div class="version">v6.8.2</div>
 </body>
 </html>
+
+
