feat: add back/forward/home navigation buttons v6.8.2

--- a/public/cameras.html
+++ b/public/cameras.html
@@ -43,8 +43,11 @@
     <link rel="stylesheet" href="css/navigation.css">
 </head>
 <body class="with-nav">
-    <div class="nav-header">
+        <div class="nav-header">
         <button class="nav-btn nav-back" onclick="window.history.back()">
+            <span></span>
+        </button>
+        <button class="nav-btn nav-forward" onclick="window.history.forward()">
             <span></span>
         </button>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
@@ -103,5 +106,6 @@
     <div class="version">v6.8.2</div>
 </body>
 </html>
+
 
 
