--- a/public/create-request.html
+++ b/public/create-request.html
@@ -104,8 +104,11 @@
     <link rel="stylesheet" href="css/navigation.css">
 </head>
 <body class="with-nav">
-    <div class="nav-header">
+        <div class="nav-header">
         <button class="nav-btn nav-back" onclick="window.history.back()">
+            <span></span>
+        </button>
+        <button class="nav-btn nav-forward" onclick="window.history.forward()">
             <span></span>
         </button>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
@@ -163,6 +166,7 @@
     </script>
 </body>
 </html>
+
 
 
 
