--- a/public/meters.html
+++ b/public/meters.html
@@ -36,8 +36,11 @@
     <link rel="stylesheet" href="css/navigation.css">
 </head>
 <body class="with-nav">
-    <div class="nav-header">
+        <div class="nav-header">
         <button class="nav-btn nav-back" onclick="window.history.back()">
+            <span></span>
+        </button>
+        <button class="nav-btn nav-forward" onclick="window.history.forward()">
             <span></span>
         </button>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
@@ -93,6 +96,7 @@
     <div class="version">v6.8.2</div>
 </body>
 </html>
+
 
 
 
