--- a/public/create-request.html
+++ b/public/create-request.html
@@ -12,12 +12,7 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f5f5f5;
-            padding: 20px;
-            min-height: 100vh;
-        }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #f5f5f5; padding-top: 80px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px; min-height: 100vh; }
 
         .container {
             max-width: 600px;
@@ -166,6 +161,7 @@
     </script>
 </body>
 </html>
+
 
 
 
