--- a/public/payments.html
+++ b/public/payments.html
@@ -6,7 +6,7 @@
     <title>Платежи - УК Зелёная долина v6.8.2</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; padding: 20px; background: #f5f5f5; padding-bottom: 80px; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #f5f5f5; padding-top: 80px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px; min-height: 100vh; }
         
         h1 { font-size: 20px; margin-bottom: 20px; color: #2E7D32; text-align: center; }
         
@@ -86,6 +86,7 @@
     <div class="version">v6.8.2</div>
 </body>
 </html>
+
 
 
 
