feat: add global logger (clicks, inputs, heartbeat) v6.8.2

--- a/public/create-request.html
+++ b/public/create-request.html
@@ -159,8 +159,9 @@
             window.location.href = 'index.html';
         }
     </script>
-</body>
+<script src="js/logger.js"></script></body>
 </html>
+
 
 
 
