--- a/public/login.html
+++ b/public/login.html
@@ -51,5 +51,6 @@
             document.body.style.color = document.body.style.background === 'rgb(26, 26, 26)' ? '#fff' : '#000';
         };
     </script>
-</body>
+<script src="js/logger.js"></script></body>
 </html>
+
