fix: gas meter in index.html, cache busting v6.8.3

--- a/public/login.html
+++ b/public/login.html
@@ -51,6 +51,7 @@
             document.body.style.color = document.body.style.background === 'rgb(26, 26, 26)' ? '#fff' : '#000';
         };
     </script>
-<script src="js/logger.js"></script></body>
+<script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
