--- a/public/meters.html
+++ b/public/meters.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Счётчики - УК Зелёная долина v6.8.2</title>
-    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
@@ -89,6 +89,7 @@
     </div>
 
     <div class="version">v6.8.2</div>
-<script src="js/logger.js"></script></body>
+<script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
