--- a/public/payments.html
+++ b/public/payments.html
@@ -36,7 +36,7 @@
         }
         .version { position: fixed; bottom: 16px; right: 16px; font-size: 12px; opacity: 0.5; color: #666; }
     </style>
-    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
         <div class="nav-header">
@@ -84,8 +84,9 @@
 
     
     <div class="version">v6.8.2</div>
-<script src="js/logger.js"></script></body>
+<script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
