--- a/public/create-request.html
+++ b/public/create-request.html
@@ -96,7 +96,7 @@
             color: #666;
         }
     </style>
-    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
         <div class="nav-header">
@@ -159,8 +159,9 @@
             window.location.href = 'index.html';
         }
     </script>
-<script src="js/logger.js"></script></body>
+<script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
