fix: force add navigation arrows to all pages v6.8.4

--- a/public/cameras.html
+++ b/public/cameras.html
@@ -43,16 +43,10 @@
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
-        <div class="nav-header">
-        <button class="nav-btn nav-back" onclick="window.history.back()">
-            <span></span>
-        </button>
-        <button class="nav-btn nav-forward" onclick="window.history.forward()">
-            <span></span>
-        </button>
-        <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
-            <span></span>
-        </button>
+            <div class="nav-header" style="display: flex !important;">
+        <button class="nav-btn nav-back" onclick="window.history.back()"><span></span></button>
+        <button class="nav-btn nav-forward" onclick="window.history.forward()"><span></span></button>
+        <button class="nav-btn nav-home" onclick="window.location.href='index.html'"><span></span></button>
     </div>
     <h1> Видеонаблюдение (Телеком Летай)</h1>
     
@@ -106,6 +100,7 @@
     <div class="version">v6.8.2</div>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
