--- a/public/meters.html
+++ b/public/meters.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <!-- Навигация -->
-    <div class="nav-header">
+        <div class="nav-header" style="display: flex !important;">
         <button class="nav-btn nav-back" onclick="window.history.back()"><span></span></button>
         <button class="nav-btn nav-forward" onclick="window.history.forward()"><span></span></button>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'"><span></span></button>
@@ -91,5 +91,6 @@
     <div class="version">v6.8.2</div>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
