--- a/public/create-request.html
+++ b/public/create-request.html
@@ -99,16 +99,10 @@
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
-        <div class="nav-header">
-        <button class="nav-btn nav-back" onclick="window.history.back()">
-            <span></span>
-        </button>
-        <button class="nav-btn nav-forward" onclick="window.history.forward()">
-            <span></span>
-        </button>
-        <button class="nav-btn nav-home" onclick="window.location.href='index.html'">
-            <span></span>
-        </button>
+            <div class="nav-header" style="display: flex !important;">
+        <button class="nav-btn nav-back" onclick="window.history.back()"><span></span></button>
+        <button class="nav-btn nav-forward" onclick="window.history.forward()"><span></span></button>
+        <button class="nav-btn nav-home" onclick="window.location.href='index.html'"><span></span></button>
     </div>
     <div class="container">
         <h1> Новая заявка</h1>
@@ -161,6 +155,7 @@
     </script>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
