--- a/public/create-request.html
+++ b/public/create-request.html
@@ -99,10 +99,18 @@
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
-            <div class="nav-header" style="display: flex !important;">
-        <button class="nav-btn nav-back" onclick="window.history.back()"><span></span></button>
-        <button class="nav-btn nav-forward" onclick="window.history.forward()"><span></span></button>
-        <button class="nav-btn nav-home" onclick="window.location.href='index.html'"><span></span></button>
+                <div class="nav-header">
+        <div style="display: flex; gap: 12px; pointer-events: auto;">
+            <button class="nav-btn" onclick="window.history.back()" aria-label="Назад">
+                <span></span>
+            </button>
+            <button class="nav-btn" onclick="window.history.forward()" aria-label="Вперед">
+                <span></span>
+            </button>
+        </div>
+        <button class="nav-btn nav-home" onclick="window.location.href='index.html'" aria-label="На главную">
+            <span></span>
+        </button>
     </div>
     <div class="container">
         <h1> Новая заявка</h1>
@@ -155,6 +163,7 @@
     </script>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
