--- a/public/meters.html
+++ b/public/meters.html
@@ -39,10 +39,18 @@
 </head>
 <body>
     <!-- Навигация -->
-        <div class="nav-header" style="display: flex !important;">
-        <button class="nav-btn nav-back" onclick="window.history.back()"><span></span></button>
-        <button class="nav-btn nav-forward" onclick="window.history.forward()"><span></span></button>
-        <button class="nav-btn nav-home" onclick="window.location.href='index.html'"><span></span></button>
+            <div class="nav-header">
+        <div style="display: flex; gap: 12px; pointer-events: auto;">
+            <button class="nav-btn" onclick="window.history.back()" aria-label="Назад">
+                <span></span>
+            </button>
+            <button class="nav-btn" onclick="window.history.forward()" aria-label="Вперед">
+                <span></span>
+            </button>
+        </div>
+        <button class="nav-btn nav-home" onclick="window.location.href='index.html'" aria-label="На главную">
+            <span></span>
+        </button>
     </div>
 
     <h1> Передача показаний</h1>
@@ -91,6 +99,7 @@
     <div class="version">v6.8.2</div>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
